--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>HTML Images</title>
+</head>
+
+<body>
+  <img src="https://yt3.ggpht.com/a-/AN66SAwdLHPMkZkwymuVy3ZNrXPzOV3YTfSWrVxrBg=s900-mo-c-c0xffffffff-rj-k-no">
+  <img
+    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.gMGYzRCAUSzoUbAVRQCJ2QHaEM%26pid%3DApi&f=1"
+    alt="image not found">
+  <img
+    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.OvRycKzP4OpK1lRtfPI6uAHaEo%26pid%3DApi&f=1"
+    alt="image not found" title="Cool space image">
+</body>
+
 </html>
